# sovabids

./: .gitattributes  .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  README.rst  SECURITY_CHANGES.md  codecov.yml  eeg_bids_fields_collection.yml  gsoc_proposal.md  lemon_prepare.py  requirements-dev.txt  requirements-gui.txt  requirements-user.txt  requirements.txt  rules.json  rules.yaml  rules.yml  rules_ideas.md  setup.cfg  setup.py  test_mne-bids.md  test_mne-bids.py
.github/: CONTRIBUTING.md
ansible/: install_and_run_sovabids.yaml
docs/: installing_sovabids.md  requirements-doc.txt  sovabids_and_bidscoin.md  using_sovabids.md
examples/: README.rst  alpha_attention_example.py  bidscoin_example.py  bidscoin_example_bidsmap.yml  bidscoin_example_rules.yml  example_heuristic_source_target_pair.py  gui_example.py  lemon_bidscoin_prepare.py  lemon_example.py  lemon_example_rules.yml  lemon_prepare.py  make_dummy_dataset.py  rpc_example.py  secure_transformations_example.py  sovabids_example.py  sovabids_example_rules.yml  test_mne-bids.md  test_mne-bids.py  test_mne-bids_rules.yml
paper/: paper.bib  paper.md
sovabids/: _version.py  apply_rules.py  bids.py  convert.py  convert_them.py  datasets.py  dicts.py  errors.py  files.py  heuristics.py  loggers.py  misc.py  parsers.py  rules.py  rules_schema.yml  settings.py  sovarpc.py  transformations.py  utils.py
tests/: lemon_prepare.py  test_bids.py  test_heuristics.py  test_mne-bids.md  test_mne-bids.py  test_path_parser.py  test_rules_transformations.py  test_sova2coin.py  test_transformations.py  (+1 more)
(+43 files in other folders)
