[metadata]
name = sovabids
url = https://github.com/yjmantilla/sovabids/
author = sovabids developers
maintainer = Yorguin Mantilla
maintainer_email = yjmantilla@gmail.com
description = Automated eeg2bids conversion
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
keywords = EEG eeg bids mne mne-bids conversion
platforms = any
classifiers =
  Topic :: Scientific/Engineering
  Programming Language :: Python :: 3
  Intended Audience :: Science/Research
  Development Status :: 3 - Alpha
  Operating System :: POSIX :: Linux
  Operating System :: Unix
  Operating System :: MacOS
  Operating System :: Microsoft :: Windows
project_urls =
  Documentation = https://sovabids.readthedocs.io/en/latest/
  Bug Reports = https://github.com/yjmantilla/sovabids/issues
  Source = https://github.com/yjmantilla/sovabids

[options]
python_requires = >= 3.7
packages = find:
include_package_data = True

[options.packages.find]
exclude =
  tests
  front

[coverage:run]
omit =
  # Do not include test script in coverage report
  *tests*
  setup.py
  sovabids/_version.py

[versioneer]
VCS = git
style = pep440
versionfile_source = sovabids/_version.py
versionfile_build = sovabids/_version.py
tag_prefix = 
parentdir_prefix = 
